<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.DescriptionScreen1"
    android:background="@drawable/white_red_gradiant"
    android:weightSum="13"

    >

    <TextView
        android:id="@+id/skipButton"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:gravity="end"
        android:paddingEnd="15dp"
        android:paddingTop="16dp"
        android:text="@string/descriptionskipbutton"
        android:textStyle="bold"
        android:fontFamily="@font/adlam_display"
        android:textColor="@color/red"
        android:textSize="15dp"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="5"
        android:layout_marginTop="0dp"
        android:src="@drawable/donationdescriptionpage2"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="2dp"
        android:layout_weight="2"
        android:fontFamily="@font/jockey_one"
        android:gravity="center_vertical"
        android:lineSpacingMultiplier="1.1"
        android:text="@string/des2_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="2dp"
        android:layout_weight="3"
        android:fontFamily="sans-serif-light"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/des2description"
        android:textColor="@color/black"
        android:textSize="15sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:gravity="center">

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/jockey_one"
            android:gravity="center"
            android:text="@string/text_of_buttonnext"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>