<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Verfication"
    android:background="@color/white">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="249dp"
        android:layout_height="239dp"
        android:layout_marginStart="252dp"
        android:layout_marginBottom="548dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/redcircle" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="360dp"
        android:layout_height="85dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/battambang_bold"
        android:gravity="center"
        android:text="@string/verification_code"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="361dp"
        android:layout_height="76dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/battambang"
        android:gravity="center"
        android:text="Please Type the verification code sent to xyz"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.mukesh.OtpView
        android:id="@+id/otpView2"
        style="@style/OtpWidget.OtpView"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:elevation="10dp"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:OtpHideLineWhenFilled="true"
        app:OtpItemCount="4"
        app:OtpItemHeight="51dp"
        app:OtpItemRadius="5dp"
        app:OtpItemSpacing="25dp"
        app:OtpItemWidth="51dp"
        app:OtpLineColor="#BDBDBD"
        app:OtpViewType="rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verify_button"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/jockey_one"
        android:text="Verify"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="341dp"
        android:layout_height="40dp"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/didn_t_receive_code_resend_code"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpView2" />

</androidx.constraintlayout.widget.ConstraintLayout>