<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginScreen"
    android:background="@color/red"
    android:orientation="vertical"
    android:weightSum="12">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        android:layout_marginTop="188dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_login_signup_screen" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="315dp"
        android:layout_height="524dp"
        android:background="@drawable/login_signup_box"
        android:elevation="15dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/jockey_one"
            android:gravity="center"
            android:text="Login"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:gravity="center_vertical">

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="@drawable/custominput"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:hint="Email"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:gravity="center_vertical"></LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="@drawable/custominput"
            android:drawableStart="@drawable/custom_password_icon"
            android:drawablePadding="12dp"
            android:hint="Password"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingEnd="5dp"
            android:weightSum="6">

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="3" />


            <TextView
                android:id="@+id/forget_password"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="3"
                android:fontFamily="@font/jockey_one"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/forget_password"
                android:textColor="@color/black"
                android:textSize="17sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:gravity="center">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="2"
            android:gravity="center">

            <Button
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/red"
                android:text="Login"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:id="@+id/login_btn"
                android:fontFamily="@font/jockey_one"
                android:textSize="20sp"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/login_to_signup"
        android:layout_width="293dp"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/jockey_one"
        android:gravity="center"
        android:text="@string/login_to_signup_option"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="306dp"
        android:layout_height="95dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/jockey_one"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>